# IntelligentRobotics_TIAGo

./: .gitignore  CMakeLists.txt  Group39_hw1.docx  README.md  package.xml  run_all.sh
cfg/: apriltag_calibration.yaml  apriltags_iaslab.yaml
group39_hw1/: CMakeLists.txt  package.xml
group39_hw1/action/: Move.action
group39_hw1/msg/: Coordinates.msg
group39_hw1/src/: movement_node.cpp  tiago_client.cpp  tiago_server.cpp
group39_hw2/: CMakeLists.txt  package.xml
group39_hw2/action/: Detect.action  Manipulate.action
group39_hw2/msg/: DetectedObj.msg
group39_hw2/src/: kappaspastico.cpp  tiago_brain.cpp  tiago_brain_old.cpp  tiago_detection.cpp  tiago_manipulation.cpp
launch/: apriltag.launch  apriltag_ros.launch  environment.launch  mapping.launch  navigation.launch  start_simulation.launch
map/: map.pgm
models/aws_simulation/aws_robomaker_retail_BookD_01/: model.sdf
models/aws_simulation/aws_robomaker_retail_BookD_02/: model.sdf
models/aws_simulation/aws_robomaker_retail_BookF_01/: model.sdf
models/aws_simulation/aws_robomaker_retail_BookshelfB_01/: model.sdf
models/aws_simulation/aws_robomaker_retail_BookshelfC_01/: model.sdf
models/aws_simulation/aws_robomaker_retail_DeskA_01/: model.sdf
models/cafe_table/: model-1_4.sdf  model.sdf
models/objects/Hexagon/: model.sdf
models/objects/OctagonBig/: model.sdf
models/objects/OctagonSmall/: model.sdf
src/: Human.cpp  Human_node.cpp
srv/: Objs.srv
worlds/: ias_lab_room_empty.world  ias_lab_room_full.world  ias_lab_room_full_tables.world  robotics_library.world
(+1 files in other folders)
